--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "mongoose": "^8.18.0",
     "morgan": "^1.10.1",
     "multer": "^2.0.2",
-    "qrcode": "^1.5.4"
+  "qrcode": "^1.5.4",
+  "express-rate-limit": "^7.4.0"
   }
 }
