--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "start": "node index.js",
     "dev": "node index.js",
     "seed:users": "node scripts/seedUsers.js",
+    "seed:courses": "node scripts/seedCourses.js",
+    "seed:all": "npm run seed:courses && npm run seed:users",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
