--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "axios": "^1.12.2",
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
-  "dotenv": "^16.4.5",
+    "dotenv": "^16.4.5",
     "exceljs": "^4.4.0",
-  "express": "^4.19.2",
+    "express": "^4.19.2",
+    "express-rate-limit": "^7.4.0",
     "express-validator": "^7.2.1",
     "json2csv": "^6.0.0-alpha.2",
     "jsonwebtoken": "^9.0.2",
@@ -28,7 +30,6 @@
     "mongoose": "^8.18.0",
     "morgan": "^1.10.1",
     "multer": "^2.0.2",
-    "qrcode": "^1.5.4",
-    "express-rate-limit": "^7.4.0"
+    "qrcode": "^1.5.4"
   }
 }
